# Ghosted-

./: .coverage  .flake8  .gitattributes  .gitignore  DISTRIBUTION.md  Install-Ghosted.bat  Install-Ghosted.ps1  Install-RabbitGhost.ps1  LICENSE  README.md  SIGNING.md  SUPPORTERS.md  build-installer.ps1  build.ps1  go.md  installer.iss  pyproject.toml  setup-auth.ps1  sign.ps1
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html
quarantine/: .rabbit_quarantine_vault
scoop/: ghosted.json
signing/: azure-metadata.example.json
src/ghosted/: __init__.py  _sovereign_cipher.py  _sovereign_kdf.py  _sovereign_wireguard.py  bridge.py  connectivity.py  console.py  contacts.py  contracts.py  crypto.py  defense.py  docparse.py  dpapi.py  event_bus.py  feedback.py  flusher.py  gate.py  ghost.py  health.py  help_text.py  homepage.py  http.py  imap_pull.py  mail.py  mail_filters.py  mesh_mail.py  mfa.py  notifications.py  ocr.py  parser.py  preferences.py  qrcode.py  scan.py  security.py  semantic_search.py  smtp_inbox.py  spellcheck.py  tor.py  transport.py  twofactor.py  (+5 more)
src/rabbitghost/: __init__.py  _sovereign_cipher.py  _sovereign_kdf.py  _sovereign_semantic.py  _sovereign_wireguard.py  bridge.py  connectivity.py  console.py  contacts.py  contracts.py  docparse.py  flusher.py  gate.py  ghost.py  help_text.py  homepage.py  http.py  imap_pull.py  mail.py  mail_filters.py  mesh_mail.py  parser.py  scan.py  semantic_search.py  smtp_inbox.py  transport.py  vault.py  web.py  wireguard.py
tests/: test_audit_fixes.py  test_auth_features.py  test_bridge.py  test_connectivity.py  test_console.py  test_contacts_filters.py  test_defense.py  test_gate.py  test_hardening2.py  test_help.py  test_http_integration.py  test_identity.py  test_integration.py  test_mail.py  test_mail_functional.py  test_mesh_mail.py  test_new_features.py  test_ocr.py  test_parser.py  test_receive.py  test_session_persist.py  test_smoke.py  test_stego.py  test_transport.py  test_updater.py  test_vault.py  test_wireguard.py  test_workflow_e2e.py
tools/: train_semantic.py
trust/: Ghosted-Developer.cer  Trust-Ghosted-Developer.ps1
winget/: Sir1ntegral.Ghosted.installer.yaml  Sir1ntegral.Ghosted.locale.en-US.yaml  Sir1ntegral.Ghosted.yaml
