[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rabbitghost"
version = "0.1.0"
description = "Sovereign stealth console + Google-like homepage + semantic search, built on the Rabbit mind."
readme = "README.md"
requires-python = ">=3.11"
# Runtime dependency: the `rabbit` package (the mind) must be importable — see README.
# The browsing/handshake path uses curl_cffi; OCR (optional) uses rapidocr-onnxruntime.
dependencies = [
    "curl_cffi",
]

[project.optional-dependencies]
# Image OCR backend (parse <image>). numpy/scipy moved out -> see [semantic].
ocr = ["rapidocr-onnxruntime", "Pillow"]
# Meaning-ranking of search results (homepage + browse). The rabbit semantic model
# needs numpy/scipy; without this extra, ranking degrades to lexical + sentiment.
semantic = ["numpy", "scipy"]
build = ["pyinstaller"]
dev = ["pytest"]

[project.scripts]
rabbitghost = "rabbitghost.console:menu"
rabbitghost-home = "rabbitghost.homepage:serve"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the trained semantic model with `pip install .` (src-layout would drop it
# otherwise — the audit's "model never ships" bug). PyInstaller bundles it via build.ps1.
rabbitghost = ["data/*.json"]
