[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ghosted"
version = "0.1.0"
description = "Sovereign stealth console + Google-like homepage + semantic search — a standalone tool."
readme = "README.md"
requires-python = ">=3.11"
# Self-contained: NO dependency on the `rabbit` package. Base deps power the core
# faces — masked web search/fetch (curl_cffi + beautifulsoup4) and image stego (Pillow).
# Each base dep also degrades gracefully (curl_cffi->urllib, bs4->regex).
dependencies = [
    "curl_cffi",
    "beautifulsoup4",
    "Pillow",
]

[project.optional-dependencies]
# Image OCR backend (parse <image>).
ocr = ["rapidocr-onnxruntime"]
# Rich document extraction (parse <pdf|docx>). Without it, those formats degrade.
docs = ["pypdf", "python-docx"]
# Meaning-ranking of search results (homepage + browse). Without it, ranking
# degrades to lexical + sentiment.
semantic = ["numpy"]
build = ["pyinstaller"]
dev = ["pytest"]

[project.scripts]
ghosted = "ghosted.console:menu"
ghosted-home = "ghosted.homepage:serve"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the trained semantic model with `pip install .` (src-layout would drop it
# otherwise — the audit's "model never ships" bug). PyInstaller bundles it via build.ps1.
ghosted = ["data/*.json"]
