[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ghosted"
version = "0.1.0"
description = "Sovereign stealth console + Google-like homepage + semantic search — a standalone tool."
readme = "README.md"
requires-python = ">=3.11"
# Self-contained: NO dependency on the `rabbit` package. Base deps power the core
# faces — masked web search/fetch (curl_cffi + beautifulsoup4) and image stego (Pillow).
# Each base dep also degrades gracefully (curl_cffi->urllib, bs4->regex).
dependencies = [
    "curl_cffi>=0.15.0",
    "beautifulsoup4>=4.13.0",
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
# Image OCR backend (parse <image>).
ocr = ["rapidocr-onnxruntime>=1.3.0"]
# Rich document extraction (parse <pdf|docx>). Without it, those formats degrade.
docs = ["pypdf>=6.0.0", "python-docx>=1.1.0"]
# Meaning-ranking of search results (homepage + browse). Without it, ranking
# degrades to lexical + sentiment.
semantic = ["numpy>=2.0.0"]
build = ["pyinstaller>=6.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
ghosted = "ghosted.console:menu"
ghosted-home = "ghosted.homepage:serve"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the trained semantic model with `pip install .` (src-layout would drop it
# otherwise — the audit's "model never ships" bug). PyInstaller bundles it via build.ps1.
ghosted = ["data/*.json"]
